@@ -1,3 +1,18 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.adapter;
 
 import java.io.IOException;
@@ -5,11 +20,10 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.security.Principal;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -43,6 +57,7 @@ import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.model.api.annotation.ResourceDef;
 import ca.uhn.fhir.parser.IParser;
 import dev.dsf.common.auth.conf.Identity;
+import dev.dsf.common.auth.conf.PractitionerIdentity;
 import dev.dsf.common.ui.theme.Theme;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.PathSegment;
@@ -82,6 +97,8 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 	private static final Pattern JSON_ID_UUID_AND_VERSION_PATTERN = Pattern
 			.compile("\"id\": \"(" + UUID + ")\",\\n([ ]*)\"meta\": \\{\\n([ ]*)\"versionId\": \"([0-9]+)\",");
 
+	private static final String CODE_SYSTEM_PRACTITIONER_ROLE = "http://dsf.dev/fhir/CodeSystem/practitioner-role";
+
 	private final String serverBaseUrl;
 	private final Theme theme;
 	private final FhirContext fhirContext;
@@ -117,7 +134,7 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 
 		ClassLoaderTemplateResolver resolver = new ClassLoaderTemplateResolver();
 		resolver.setTemplateMode(TemplateMode.HTML);
-		resolver.setPrefix("/template/");
+		resolver.setPrefix("/fhir/template/");
 		resolver.setSuffix(".html");
 		resolver.setCacheable(cacheEnabled);
 
@@ -144,12 +161,33 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 		context.setVariable("heading", getHeading(resource, uriInfo));
 		context.setVariable("username",
 				securityContext.getUserPrincipal() instanceof Identity i ? i.getDisplayName() : null);
+
+		String usernameTitle = "";
+		if (securityContext.getUserPrincipal() instanceof PractitionerIdentity p)
+		{
+			if (p.getPractitionerIdentifierValue().isPresent())
+				usernameTitle += "Mail: " + p.getPractitionerIdentifierValue().get();
+			if (p.getPractitionerIdentifierValue().isPresent() && !p.getPractionerRoles().isEmpty())
+				usernameTitle += " - ";
+			if (!p.getPractionerRoles().isEmpty())
+				usernameTitle += p.getPractionerRoles().stream()
+						.map(c -> CODE_SYSTEM_PRACTITIONER_ROLE.equals(c.getSystem()) ? c.getCode()
+								: c.getSystem() + "|" + c.getCode())
+						.collect(Collectors.joining(", ", "Roles: ", ""));
+		}
+		context.setVariable("usernameTitle", usernameTitle);
+
+		context.setVariable("practitionerIdentifierValue",
+				securityContext.getUserPrincipal() instanceof PractitionerIdentity p
+						? p.getPractitionerIdentifierValue().orElse(null)
+						: null);
+
 		context.setVariable("openid", "OPENID".equals(securityContext.getAuthenticationScheme()));
 		context.setVariable("xml", toXml(mediaType, resource));
 		context.setVariable("json", toJson(mediaType, resource));
 		context.setVariable("resourceId", ElementId.from(resource));
 
-		getContext(type, uriInfo).ifPresent(tContext ->
+		getContext(type, uriInfo, resource, securityContext.getUserPrincipal()).ifPresent(tContext ->
 		{
 			context.setVariable("htmlFragment", tContext.getHtmlFragment());
 			tContext.setVariables(context::setVariable, resource);
@@ -159,15 +197,16 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 		templateEngine.process("main", context, writer);
 	}
 
-	private Optional<ThymeleafContext> getContext(Class<?> type, UriInfo uriInfo)
+	private Optional<ThymeleafContext> getContext(Class<?> type, UriInfo uriInfo, Resource resource,
+			Principal principal)
 	{
 		return contextsByResourceType.getOrDefault(type, List.of()).stream().filter(g ->
 		{
 			Optional<String> lastSegment = uriInfo.getPathSegments().stream().filter(Objects::nonNull)
 					.map(PathSegment::getPath).filter(Objects::nonNull).filter(s -> !s.isBlank())
-					.reduce((first, second) -> second);
+					.reduce((_, second) -> second);
 
-			return lastSegment.map(g::isResourceSupported).orElse(false);
+			return lastSegment.map(g::isResourceSupported).orElseGet(() -> g.isRootSupported(resource, principal));
 		}).findFirst();
 	}
 
@@ -175,9 +214,9 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 	{
 		try
 		{
-			return new URL(serverBaseUrl).getPath();
+			return new URI(serverBaseUrl).getPath();
 		}
-		catch (MalformedURLException e)
+		catch (URISyntaxException e)
 		{
 			throw new RuntimeException(e);
 		}
@@ -278,21 +317,23 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 		content = versionMatcher.replaceAll(result ->
 		{
 			Optional<String> resourceName = getResourceName(resource, result.group(1));
-			return resourceName.map(rN -> "&lt;id value=\"<a href=\"" + rN + "/" + result.group(1) + "\">"
-					+ result.group(1) + "</a>\"/&gt;\n" + result.group(2) + "&lt;meta&gt;\n" + result.group(3)
-					+ "&lt;versionId value=\"" + "<a href=\"" + rN + "/" + result.group(1) + "/_history/"
-					+ result.group(4) + "\">" + result.group(4) + "</a>" + "\"/&gt;").orElse(result.group(0));
+			return resourceName
+					.map(rN -> "&lt;id value=\"<a href=\"" + rN + "/" + result.group(1) + "?_format=html\">"
+							+ result.group(1) + "</a>\"/&gt;\n" + result.group(2) + "&lt;meta&gt;\n" + result.group(3)
+							+ "&lt;versionId value=\"" + "<a href=\"" + rN + "/" + result.group(1) + "/_history/"
+							+ result.group(4) + "?_format=html\">" + result.group(4) + "</a>" + "\"/&gt;")
+					.orElse(result.group(0));
 		});
 
 		Matcher urlMatcher = URL_PATTERN.matcher(content);
 		content = urlMatcher.replaceAll(result -> "<a href=\""
 				+ result.group().replace("&amp;amp;", "&amp;").replace("&amp;apos;", "&apos;")
 						.replace("&amp;gt;", "&gt;").replace("&amp;lt;", "&lt;").replace("&amp;quot;", "&quot;")
-				+ "\">" + result.group() + "</a>");
+				+ "?_format=html\">" + result.group() + "</a>");
 
 		Matcher referenceUuidMatcher = XML_REFERENCE_UUID_PATTERN.matcher(content);
-		content = referenceUuidMatcher.replaceAll(
-				result -> "&lt;reference value=\"<a href=\"" + result.group(1) + "\">" + result.group(1) + "</a>\"&gt");
+		content = referenceUuidMatcher.replaceAll(result -> "&lt;reference value=\"<a href=\"" + result.group(1)
+				+ "?_format=html\">" + result.group(1) + "</a>\"&gt");
 
 		return content;
 	}
@@ -376,20 +417,23 @@ public class ThymeleafTemplateServiceImpl implements ThymeleafTemplateService, I
 		String content = parser.encodeResourceToString(resource).replace("<", "&lt;").replace(">", "&gt;");
 
 		Matcher urlMatcher = URL_PATTERN.matcher(content);
-		content = urlMatcher.replaceAll(result -> "<a href=\"" + result.group() + "\">" + result.group() + "</a>");
+		content = urlMatcher
+				.replaceAll(result -> "<a href=\"" + result.group() + "?_format=html\">" + result.group() + "</a>");
 
 		Matcher referenceUuidMatcher = JSON_REFERENCE_UUID_PATTERN.matcher(content);
-		content = referenceUuidMatcher.replaceAll(
-				result -> "\"reference\": \"<a href=\"" + result.group(1) + "\">" + result.group(1) + "</a>\",");
+		content = referenceUuidMatcher.replaceAll(result -> "\"reference\": \"<a href=\"" + result.group(1)
+				+ "?_format=html\">" + result.group(1) + "</a>\",");
 
 		Matcher idUuidMatcher = JSON_ID_UUID_AND_VERSION_PATTERN.matcher(content);
 		content = idUuidMatcher.replaceAll(result ->
 		{
 			Optional<String> resourceName = getResourceName(resource, result.group(1));
-			return resourceName.map(rN -> "\"id\": \"<a href=\"" + rN + "/" + result.group(1) + "\">" + result.group(1)
-					+ "</a>\",\n" + result.group(2) + "\"meta\": {\n" + result.group(3) + "\"versionId\": \""
-					+ "<a href=\"" + rN + "/" + result.group(1) + "/_history/" + result.group(4) + "\">"
-					+ result.group(4) + "</a>" + "\",").orElse(result.group(0));
+			return resourceName
+					.map(rN -> "\"id\": \"<a href=\"" + rN + "/" + result.group(1) + "?_format=html\">"
+							+ result.group(1) + "</a>\",\n" + result.group(2) + "\"meta\": {\n" + result.group(3)
+							+ "\"versionId\": \"" + "<a href=\"" + rN + "/" + result.group(1) + "/_history/"
+							+ result.group(4) + "?_format=html\">" + result.group(4) + "</a>" + "\",")
+					.orElse(result.group(0));
 		});
 
 		return content;
