@@ -1,9 +1,23 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.authorization;
 
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -110,7 +124,7 @@ public class EndpointAuthorizationRule extends AbstractMetaTagAuthorizationRule<
 
 	private boolean endpointWithAddressExists(Connection connection, String address)
 	{
-		Map<String, List<String>> queryParameters = Map.of("address", Collections.singletonList(address));
+		Map<String, List<String>> queryParameters = Map.of("address", List.of(address));
 		EndpointDao dao = getDao();
 		SearchQuery<Endpoint> query = dao.createSearchQueryWithoutUserFilter(PageAndCount.exists())
 				.configureParameters(queryParameters);
@@ -140,7 +154,7 @@ public class EndpointAuthorizationRule extends AbstractMetaTagAuthorizationRule<
 	private boolean endpointWithIdentifierExists(Connection connection, String identifierValue)
 	{
 		Map<String, List<String>> queryParameters = Map.of("identifier",
-				Collections.singletonList(ENDPOINT_IDENTIFIER_SYSTEM + "|" + identifierValue));
+				List.of(ENDPOINT_IDENTIFIER_SYSTEM + "|" + identifierValue));
 		EndpointDao dao = getDao();
 		SearchQuery<Endpoint> query = dao.createSearchQueryWithoutUserFilter(PageAndCount.exists())
 				.configureParameters(queryParameters);
