@@ -1,3 +1,18 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.dao.jdbc;
 
 import java.sql.Connection;
@@ -6,7 +21,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
@@ -16,8 +30,6 @@ import java.util.stream.Stream;
 import javax.sql.DataSource;
 
 import org.hl7.fhir.r4.model.Binary;
-import org.hl7.fhir.r4.model.DomainResource;
-import org.hl7.fhir.r4.model.IdType;
 import org.hl7.fhir.r4.model.Resource;
 import org.postgresql.util.PGobject;
 import org.springframework.beans.factory.InitializingBean;
@@ -78,8 +90,7 @@ public class HistroyDaoJdbc implements HistoryDao, InitializingBean
 		Objects.requireNonNull(sinceParameter, "sinceParameter");
 		Objects.requireNonNull(resource, "resource");
 
-		return readHistory(Collections.singletonList(filter), pageAndCount, atParameters, sinceParameter, resource,
-				null);
+		return readHistory(List.of(filter), pageAndCount, atParameters, sinceParameter, resource, null);
 	}
 
 	@Override
@@ -93,7 +104,7 @@ public class HistroyDaoJdbc implements HistoryDao, InitializingBean
 		Objects.requireNonNull(resource, "resource");
 		Objects.requireNonNull(id, "id");
 
-		return readHistory(Collections.singletonList(filter), pageAndCount, atParameters, sinceParameter, resource, id);
+		return readHistory(List.of(filter), pageAndCount, atParameters, sinceParameter, resource, id);
 	}
 
 	private History readHistory(List<HistoryIdentityFilter> filter, PageAndCount pageAndCount,
@@ -184,21 +195,10 @@ public class HistroyDaoJdbc implements HistoryDao, InitializingBean
 		if (json == null)
 			return null;
 
-		Resource resource;
 		if (resourceType != null)
-			resource = getJsonParser().parseResource(resourceType, json);
+			return getJsonParser().parseResource(resourceType, json);
 		else
-			resource = (Resource) getJsonParser().parseResource(json);
-
-		// TODO Bugfix HAPI is not setting version information from bundle.id while parsing non DomainResource
-		if (!(resource instanceof DomainResource))
-		{
-			IdType fixedId = new IdType(resource.getResourceType().name(), resource.getIdElement().getIdPart(),
-					resource.getMeta().getVersionId());
-			resource.setIdElement(fixedId);
-		}
-
-		return resource;
+			return (Resource) getJsonParser().parseResource(json);
 	}
 
 	private String createCountSql(boolean forId, boolean forResource, List<HistoryIdentityFilter> filter,
