@@ -1,8 +1,22 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.spring.config;
 
 import static org.springframework.core.Ordered.HIGHEST_PRECEDENCE;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,19 +29,33 @@ import org.springframework.core.annotation.Order;
 import dev.dsf.fhir.service.InitialDataMigrator;
 import dev.dsf.fhir.service.InitialDataMigratorImpl;
 import dev.dsf.fhir.service.migration.MigrationJob;
+import dev.dsf.fhir.service.migration.QuestionnairesMigrationJob;
+import dev.dsf.fhir.service.migration.StructureDefinitionTaskProfileMigrationJob;
 
 @Configuration
 public class InitialDataMigratorConfig
 {
 	@Autowired
-	public DaoConfig daoConfig;
+	private DaoConfig daoConfig;
+
+	@Autowired
+	private SnapshotConfig snapshotConfig;
+
+	@Autowired
+	private HelperConfig helperConfig;
+
+	@Autowired
+	private EventConfig eventConfig;
 
 	@Bean
 	public List<MigrationJob> migrationJobs()
 	{
-		// currently no migration jobs
-		// add future migration jobs here
-		return Collections.emptyList();
+		return List.of(
+				new StructureDefinitionTaskProfileMigrationJob(daoConfig.structureDefinitionDao(),
+						daoConfig.structureDefinitionSnapshotDao(), snapshotConfig.snapshotGenerator(),
+						helperConfig.exceptionHandler(), eventConfig.eventManager(), eventConfig.eventGenerator()),
+				new QuestionnairesMigrationJob(daoConfig.questionnaireDao(), eventConfig.eventManager(),
+						eventConfig.eventGenerator()));
 	}
 
 	@Bean
@@ -38,7 +66,7 @@ public class InitialDataMigratorConfig
 
 	@Order(HIGHEST_PRECEDENCE + 1)
 	@EventListener({ ContextRefreshedEvent.class })
-	public void onContextRefreshedEvent(ContextRefreshedEvent event) throws Exception
+	public void onContextRefreshedEvent()
 	{
 		initialDataMigrator().execute();
 	}
