@@ -1,13 +1,28 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.webservice.impl;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -58,6 +73,7 @@ import org.hl7.fhir.r4.model.Questionnaire;
 import org.hl7.fhir.r4.model.QuestionnaireResponse;
 import org.hl7.fhir.r4.model.ResearchStudy;
 import org.hl7.fhir.r4.model.Resource;
+import org.hl7.fhir.r4.model.ResourceType;
 import org.hl7.fhir.r4.model.StringType;
 import org.hl7.fhir.r4.model.StructureDefinition;
 import org.hl7.fhir.r4.model.StructureDefinition.StructureDefinitionKind;
@@ -71,108 +87,12 @@ import org.springframework.beans.factory.InitializingBean;
 import ca.uhn.fhir.context.support.IValidationSupport;
 import ca.uhn.fhir.model.api.annotation.ResourceDef;
 import ca.uhn.fhir.rest.api.Constants;
+import dev.dsf.common.buildinfo.BuildInfoReader;
 import dev.dsf.fhir.help.ParameterConverter;
 import dev.dsf.fhir.help.SummaryMode;
 import dev.dsf.fhir.search.IncludeParameterDefinition;
 import dev.dsf.fhir.search.SearchQueryParameter.SearchParameterDefinition;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionDate;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionIdentifier;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionName;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionStatus;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionUrl;
-import dev.dsf.fhir.search.parameters.ActivityDefinitionVersion;
-import dev.dsf.fhir.search.parameters.BinaryContentType;
-import dev.dsf.fhir.search.parameters.BundleIdentifier;
-import dev.dsf.fhir.search.parameters.CodeSystemDate;
-import dev.dsf.fhir.search.parameters.CodeSystemIdentifier;
-import dev.dsf.fhir.search.parameters.CodeSystemName;
-import dev.dsf.fhir.search.parameters.CodeSystemStatus;
-import dev.dsf.fhir.search.parameters.CodeSystemUrl;
-import dev.dsf.fhir.search.parameters.CodeSystemVersion;
-import dev.dsf.fhir.search.parameters.DocumentReferenceIdentifier;
-import dev.dsf.fhir.search.parameters.EndpointAddress;
-import dev.dsf.fhir.search.parameters.EndpointIdentifier;
-import dev.dsf.fhir.search.parameters.EndpointName;
-import dev.dsf.fhir.search.parameters.EndpointOrganization;
-import dev.dsf.fhir.search.parameters.EndpointStatus;
-import dev.dsf.fhir.search.parameters.GroupIdentifier;
-import dev.dsf.fhir.search.parameters.HealthcareServiceActive;
-import dev.dsf.fhir.search.parameters.HealthcareServiceIdentifier;
-import dev.dsf.fhir.search.parameters.HealthcareServiceName;
-import dev.dsf.fhir.search.parameters.LibraryDate;
-import dev.dsf.fhir.search.parameters.LibraryIdentifier;
-import dev.dsf.fhir.search.parameters.LibraryName;
-import dev.dsf.fhir.search.parameters.LibraryStatus;
-import dev.dsf.fhir.search.parameters.LibraryUrl;
-import dev.dsf.fhir.search.parameters.LibraryVersion;
-import dev.dsf.fhir.search.parameters.LocationIdentifier;
-import dev.dsf.fhir.search.parameters.LocationName;
-import dev.dsf.fhir.search.parameters.MeasureDate;
-import dev.dsf.fhir.search.parameters.MeasureDependsOn;
-import dev.dsf.fhir.search.parameters.MeasureIdentifier;
-import dev.dsf.fhir.search.parameters.MeasureName;
-import dev.dsf.fhir.search.parameters.MeasureReportIdentifier;
-import dev.dsf.fhir.search.parameters.MeasureStatus;
-import dev.dsf.fhir.search.parameters.MeasureUrl;
-import dev.dsf.fhir.search.parameters.MeasureVersion;
-import dev.dsf.fhir.search.parameters.NamingSystemDate;
-import dev.dsf.fhir.search.parameters.NamingSystemName;
-import dev.dsf.fhir.search.parameters.NamingSystemStatus;
-import dev.dsf.fhir.search.parameters.OrganizationActive;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationActive;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationEndpoint;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationIdentifier;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationParticipatingOrganization;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationPrimaryOrganization;
-import dev.dsf.fhir.search.parameters.OrganizationAffiliationRole;
-import dev.dsf.fhir.search.parameters.OrganizationEndpoint;
-import dev.dsf.fhir.search.parameters.OrganizationIdentifier;
-import dev.dsf.fhir.search.parameters.OrganizationName;
-import dev.dsf.fhir.search.parameters.OrganizationType;
-import dev.dsf.fhir.search.parameters.PatientActive;
-import dev.dsf.fhir.search.parameters.PatientIdentifier;
-import dev.dsf.fhir.search.parameters.PractitionerActive;
-import dev.dsf.fhir.search.parameters.PractitionerIdentifier;
-import dev.dsf.fhir.search.parameters.PractitionerRoleActive;
-import dev.dsf.fhir.search.parameters.PractitionerRoleIdentifier;
-import dev.dsf.fhir.search.parameters.PractitionerRoleOrganization;
-import dev.dsf.fhir.search.parameters.PractitionerRolePractitioner;
-import dev.dsf.fhir.search.parameters.QuestionnaireDate;
-import dev.dsf.fhir.search.parameters.QuestionnaireIdentifier;
-import dev.dsf.fhir.search.parameters.QuestionnaireName;
-import dev.dsf.fhir.search.parameters.QuestionnaireResponseAuthored;
-import dev.dsf.fhir.search.parameters.QuestionnaireResponseIdentifier;
-import dev.dsf.fhir.search.parameters.QuestionnaireResponseStatus;
-import dev.dsf.fhir.search.parameters.QuestionnaireStatus;
-import dev.dsf.fhir.search.parameters.QuestionnaireUrl;
-import dev.dsf.fhir.search.parameters.QuestionnaireVersion;
-import dev.dsf.fhir.search.parameters.ResearchStudyEnrollment;
-import dev.dsf.fhir.search.parameters.ResearchStudyIdentifier;
-import dev.dsf.fhir.search.parameters.ResearchStudyPrincipalInvestigator;
-import dev.dsf.fhir.search.parameters.ResourceId;
-import dev.dsf.fhir.search.parameters.ResourceLastUpdated;
-import dev.dsf.fhir.search.parameters.ResourceProfile;
-import dev.dsf.fhir.search.parameters.StructureDefinitionDate;
-import dev.dsf.fhir.search.parameters.StructureDefinitionIdentifier;
-import dev.dsf.fhir.search.parameters.StructureDefinitionName;
-import dev.dsf.fhir.search.parameters.StructureDefinitionStatus;
-import dev.dsf.fhir.search.parameters.StructureDefinitionUrl;
-import dev.dsf.fhir.search.parameters.StructureDefinitionVersion;
-import dev.dsf.fhir.search.parameters.SubscriptionCriteria;
-import dev.dsf.fhir.search.parameters.SubscriptionPayload;
-import dev.dsf.fhir.search.parameters.SubscriptionStatus;
-import dev.dsf.fhir.search.parameters.SubscriptionType;
-import dev.dsf.fhir.search.parameters.TaskAuthoredOn;
-import dev.dsf.fhir.search.parameters.TaskIdentifier;
-import dev.dsf.fhir.search.parameters.TaskModified;
-import dev.dsf.fhir.search.parameters.TaskRequester;
-import dev.dsf.fhir.search.parameters.TaskStatus;
-import dev.dsf.fhir.search.parameters.ValueSetDate;
-import dev.dsf.fhir.search.parameters.ValueSetIdentifier;
-import dev.dsf.fhir.search.parameters.ValueSetName;
-import dev.dsf.fhir.search.parameters.ValueSetStatus;
-import dev.dsf.fhir.search.parameters.ValueSetUrl;
-import dev.dsf.fhir.search.parameters.ValueSetVersion;
+import dev.dsf.fhir.search.parameters.*;
 import dev.dsf.fhir.search.parameters.basic.AbstractSearchParameter;
 import dev.dsf.fhir.search.parameters.rev.include.AbstractRevIncludeParameter;
 import dev.dsf.fhir.search.parameters.rev.include.EndpointOrganizationRevInclude;
@@ -180,10 +100,10 @@ import dev.dsf.fhir.search.parameters.rev.include.OrganizationAffiliationPartici
 import dev.dsf.fhir.search.parameters.rev.include.OrganizationAffiliationPrimaryOrganizationRevInclude;
 import dev.dsf.fhir.search.parameters.rev.include.OrganizationEndpointRevInclude;
 import dev.dsf.fhir.search.parameters.rev.include.ResearchStudyEnrollmentRevInclude;
+import dev.dsf.fhir.service.DefaultProfileProvider;
 import dev.dsf.fhir.webservice.base.AbstractBasicService;
 import dev.dsf.fhir.webservice.specification.ConformanceService;
 import dev.dsf.fhir.websocket.ServerEndpoint;
-import dev.dsf.tools.build.BuildInfoReader;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
@@ -242,17 +162,20 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 	private final BuildInfoReader buildInfoReader;
 	private final ParameterConverter parameterConverter;
 	private final IValidationSupport validationSupport;
+	private final DefaultProfileProvider defaultProfileProvider;
 
 	private final List<CodeableConcept> securityServices;
 
 	public ConformanceServiceImpl(String serverBase, int defaultPageCount, BuildInfoReader buildInfoReader,
-			ParameterConverter parameterConverter, IValidationSupport validationSupport, boolean oAuthEnabled)
+			ParameterConverter parameterConverter, IValidationSupport validationSupport,
+			DefaultProfileProvider defaultProfileProvider, boolean oAuthEnabled)
 	{
 		this.serverBase = serverBase;
 		this.defaultPageCount = defaultPageCount;
 		this.buildInfoReader = buildInfoReader;
 		this.parameterConverter = parameterConverter;
 		this.validationSupport = validationSupport;
+		this.defaultProfileProvider = defaultProfileProvider;
 		this.securityServices = oAuthEnabled ? List.of(CERTIFICATES, OAUTH) : List.of(CERTIFICATES);
 	}
 
@@ -263,6 +186,7 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 		Objects.requireNonNull(buildInfoReader, "buildInfoReader");
 		Objects.requireNonNull(parameterConverter, "parameterConverter");
 		Objects.requireNonNull(validationSupport, "validationSupport");
+		Objects.requireNonNull(defaultProfileProvider, "defaultProfileProvider");
 	}
 
 	@Override
@@ -305,7 +229,7 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 		websocketExtension.setUrl("http://hl7.org/fhir/StructureDefinition/capabilitystatement-websocket");
 		websocketExtension.setValue(new UrlType(serverBase.replace("http", "ws") + ServerEndpoint.PATH));
 
-		var resources = Arrays.asList(ActivityDefinition.class, Binary.class, Bundle.class, CodeSystem.class,
+		var resources = List.of(ActivityDefinition.class, Binary.class, Bundle.class, CodeSystem.class,
 				DocumentReference.class, Endpoint.class, Group.class, HealthcareService.class, Library.class,
 				Location.class, Measure.class, MeasureReport.class, NamingSystem.class, Organization.class,
 				OrganizationAffiliation.class, Patient.class, PractitionerRole.class, Practitioner.class,
@@ -316,95 +240,94 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 		var revIncludeParameters = new HashMap<Class<? extends Resource>, List<Class<? extends AbstractRevIncludeParameter>>>();
 
 		searchParameters.put(ActivityDefinition.class,
-				Arrays.asList(ActivityDefinitionDate.class, ActivityDefinitionUrl.class,
-						ActivityDefinitionIdentifier.class, ActivityDefinitionVersion.class,
-						ActivityDefinitionName.class, ActivityDefinitionStatus.class));
+				List.of(ActivityDefinitionDate.class, ActivityDefinitionUrl.class, ActivityDefinitionIdentifier.class,
+						ActivityDefinitionVersion.class, ActivityDefinitionName.class, ActivityDefinitionStatus.class));
 
-		searchParameters.put(Binary.class, Arrays.asList(BinaryContentType.class));
+		searchParameters.put(Binary.class, List.of(BinaryContentType.class));
 
-		searchParameters.put(Bundle.class, Arrays.asList(BundleIdentifier.class));
+		searchParameters.put(Bundle.class, List.of(BundleIdentifier.class));
 
-		searchParameters.put(CodeSystem.class, Arrays.asList(CodeSystemDate.class, CodeSystemIdentifier.class,
+		searchParameters.put(CodeSystem.class, List.of(CodeSystemDate.class, CodeSystemIdentifier.class,
 				CodeSystemName.class, CodeSystemUrl.class, CodeSystemVersion.class, CodeSystemStatus.class));
 
-		searchParameters.put(DocumentReference.class, Arrays.asList(DocumentReferenceIdentifier.class));
+		searchParameters.put(DocumentReference.class, List.of(DocumentReferenceIdentifier.class));
 
-		searchParameters.put(Endpoint.class, Arrays.asList(EndpointAddress.class, EndpointIdentifier.class,
+		searchParameters.put(Endpoint.class, List.of(EndpointAddress.class, EndpointIdentifier.class,
 				EndpointName.class, EndpointOrganization.class, EndpointStatus.class));
-		revIncludeParameters.put(Endpoint.class, Arrays.asList(OrganizationEndpointRevInclude.class));
+		revIncludeParameters.put(Endpoint.class, List.of(OrganizationEndpointRevInclude.class));
 
-		searchParameters.put(Group.class, Arrays.asList(GroupIdentifier.class));
-		revIncludeParameters.put(Group.class, Arrays.asList(ResearchStudyEnrollmentRevInclude.class));
+		searchParameters.put(Group.class, List.of(GroupIdentifier.class));
+		revIncludeParameters.put(Group.class, List.of(ResearchStudyEnrollmentRevInclude.class));
 
-		searchParameters.put(HealthcareService.class, Arrays.asList(HealthcareServiceActive.class,
-				HealthcareServiceIdentifier.class, HealthcareServiceName.class));
+		searchParameters.put(HealthcareService.class,
+				List.of(HealthcareServiceActive.class, HealthcareServiceIdentifier.class, HealthcareServiceName.class));
 
-		searchParameters.put(Library.class, Arrays.asList(LibraryDate.class, LibraryIdentifier.class, LibraryName.class,
+		searchParameters.put(Library.class, List.of(LibraryDate.class, LibraryIdentifier.class, LibraryName.class,
 				LibraryStatus.class, LibraryUrl.class, LibraryVersion.class));
 
-		searchParameters.put(Location.class, Arrays.asList(LocationIdentifier.class, LocationName.class));
+		searchParameters.put(Location.class, List.of(LocationIdentifier.class, LocationName.class));
 
-		searchParameters.put(Measure.class,
-				Arrays.asList(MeasureDate.class, MeasureDependsOn.class, MeasureIdentifier.class, MeasureName.class,
-						MeasureStatus.class, MeasureUrl.class, MeasureVersion.class));
+		searchParameters.put(Measure.class, List.of(MeasureDate.class, MeasureDependsOn.class, MeasureIdentifier.class,
+				MeasureName.class, MeasureStatus.class, MeasureUrl.class, MeasureVersion.class));
 
-		searchParameters.put(MeasureReport.class, Arrays.asList(MeasureReportIdentifier.class));
+		searchParameters.put(MeasureReport.class, List.of(MeasureReportIdentifier.class));
 
 		searchParameters.put(NamingSystem.class,
-				Arrays.asList(NamingSystemDate.class, NamingSystemName.class, NamingSystemStatus.class));
+				List.of(NamingSystemDate.class, NamingSystemName.class, NamingSystemStatus.class));
 
-		searchParameters.put(Organization.class, Arrays.asList(OrganizationActive.class, OrganizationEndpoint.class,
+		searchParameters.put(Organization.class, List.of(OrganizationActive.class, OrganizationEndpoint.class,
 				OrganizationIdentifier.class, OrganizationName.class, OrganizationType.class));
 		revIncludeParameters.put(Organization.class,
-				Arrays.asList(EndpointOrganizationRevInclude.class,
+				List.of(EndpointOrganizationRevInclude.class,
 						OrganizationAffiliationParticipatingOrganizationRevInclude.class,
 						OrganizationAffiliationPrimaryOrganizationRevInclude.class));
 
 		searchParameters.put(OrganizationAffiliation.class,
-				Arrays.asList(OrganizationAffiliationActive.class, OrganizationAffiliationEndpoint.class,
+				List.of(OrganizationAffiliationActive.class, OrganizationAffiliationEndpoint.class,
 						OrganizationAffiliationIdentifier.class, OrganizationAffiliationParticipatingOrganization.class,
 						OrganizationAffiliationPrimaryOrganization.class, OrganizationAffiliationRole.class));
 
-		searchParameters.put(Patient.class, Arrays.asList(PatientActive.class, PatientIdentifier.class));
+		searchParameters.put(Patient.class, List.of(PatientActive.class, PatientIdentifier.class));
 
-		searchParameters.put(Practitioner.class, Arrays.asList(PractitionerActive.class, PractitionerIdentifier.class));
+		searchParameters.put(Practitioner.class, List.of(PractitionerActive.class, PractitionerIdentifier.class));
 
 		searchParameters.put(PractitionerRole.class,
-				Arrays.asList(PractitionerRoleActive.class, PractitionerRoleIdentifier.class,
+				List.of(PractitionerRoleActive.class, PractitionerRoleIdentifier.class,
 						PractitionerRoleOrganization.class, PractitionerRolePractitioner.class));
 
 		searchParameters.put(Questionnaire.class,
-				Arrays.asList(QuestionnaireDate.class, QuestionnaireIdentifier.class, QuestionnaireName.class,
+				List.of(QuestionnaireDate.class, QuestionnaireIdentifier.class, QuestionnaireName.class,
 						QuestionnaireStatus.class, QuestionnaireUrl.class, QuestionnaireVersion.class));
 
-		searchParameters.put(QuestionnaireResponse.class, Arrays.asList(QuestionnaireResponseAuthored.class,
-				QuestionnaireResponseIdentifier.class, QuestionnaireResponseStatus.class));
+		searchParameters.put(QuestionnaireResponse.class,
+				List.of(QuestionnaireResponseAuthor.class, QuestionnaireResponseAuthored.class,
+						QuestionnaireResponseIdentifier.class, QuestionnaireResponseStatus.class));
 
-		searchParameters.put(ResearchStudy.class, Arrays.asList(ResearchStudyIdentifier.class,
-				ResearchStudyEnrollment.class, ResearchStudyPrincipalInvestigator.class));
+		searchParameters.put(ResearchStudy.class, List.of(ResearchStudyIdentifier.class, ResearchStudyEnrollment.class,
+				ResearchStudyPrincipalInvestigator.class));
 
 		searchParameters.put(StructureDefinition.class,
-				Arrays.asList(StructureDefinitionDate.class, StructureDefinitionIdentifier.class,
+				List.of(StructureDefinitionDate.class, StructureDefinitionIdentifier.class,
 						StructureDefinitionName.class, StructureDefinitionStatus.class, StructureDefinitionUrl.class,
 						StructureDefinitionVersion.class));
 
-		searchParameters.put(Subscription.class, Arrays.asList(SubscriptionCriteria.class, SubscriptionPayload.class,
+		searchParameters.put(Subscription.class, List.of(SubscriptionCriteria.class, SubscriptionPayload.class,
 				SubscriptionStatus.class, SubscriptionType.class));
 
-		searchParameters.put(Task.class, Arrays.asList(TaskAuthoredOn.class, TaskIdentifier.class, TaskModified.class,
+		searchParameters.put(Task.class, List.of(TaskAuthoredOn.class, TaskIdentifier.class, TaskModified.class,
 				TaskRequester.class, TaskStatus.class));
 
-		searchParameters.put(ValueSet.class, Arrays.asList(ValueSetDate.class, ValueSetIdentifier.class,
-				ValueSetName.class, ValueSetUrl.class, ValueSetVersion.class, ValueSetStatus.class));
+		searchParameters.put(ValueSet.class, List.of(ValueSetDate.class, ValueSetIdentifier.class, ValueSetName.class,
+				ValueSetUrl.class, ValueSetVersion.class, ValueSetStatus.class));
 
 		var operations = new HashMap<Class<? extends DomainResource>, List<CapabilityStatementRestResourceOperationComponent>>();
 
 		var snapshotOperation = createOperation("snapshot",
 				"http://hl7.org/fhir/OperationDefinition/StructureDefinition-snapshot",
 				"Generates a StructureDefinition instance with a snapshot, based on a differential in a specified StructureDefinition");
-		operations.put(StructureDefinition.class, Arrays.asList(snapshotOperation));
+		operations.put(StructureDefinition.class, List.of(snapshotOperation));
 
-		var standardSortableSearchParameters = Arrays.asList(ResourceId.class, ResourceLastUpdated.class,
+		var standardSortableSearchParameters = List.of(ResourceId.class, ResourceLastUpdated.class,
 				ResourceProfile.class);
 
 		Map<String, List<CanonicalType>> profileUrlsByResource = validationSupport.fetchAllStructureDefinitions()
@@ -418,6 +341,9 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 
 		for (Class<? extends Resource> resource : resources)
 		{
+			ResourceDef resourceDefAnnotation = resource.getAnnotation(ResourceDef.class);
+			ResourceType resourceType = ResourceType.valueOf(resourceDefAnnotation.name());
+
 			CapabilityStatementRestResourceComponent r = rest.addResource();
 			r.setVersioning(ResourceVersionPolicy.VERSIONED);
 			r.setReadHistory(true);
@@ -429,9 +355,11 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 			r.addReferencePolicy(ReferenceHandlingPolicy.LITERAL);
 			r.addReferencePolicy(ReferenceHandlingPolicy.LOGICAL);
 
-			ResourceDef resourceDefAnnotation = resource.getAnnotation(ResourceDef.class);
+			Optional<String> defaultProfile = defaultProfileProvider.getDefaultProfile(resourceType);
+
 			r.setType(resourceDefAnnotation.name());
-			r.setProfile(resourceDefAnnotation.profile());
+			r.setProfile(defaultProfile.orElse(resourceDefAnnotation.profile()));
+
 			r.addInteraction().setCode(TypeRestfulInteraction.CREATE);
 			r.addInteraction().setCode(TypeRestfulInteraction.READ);
 			r.addInteraction().setCode(TypeRestfulInteraction.VREAD);
@@ -439,7 +367,7 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 			r.addInteraction().setCode(TypeRestfulInteraction.DELETE);
 			r.addInteraction().setCode(TypeRestfulInteraction.SEARCHTYPE);
 
-			var resourceSearchParameters = searchParameters.getOrDefault(resource, Collections.emptyList());
+			var resourceSearchParameters = searchParameters.getOrDefault(resource, List.of());
 			resourceSearchParameters.stream().map(this::createSearchParameter)
 					.sorted(Comparator.comparing(CapabilityStatementRestResourceSearchParamComponent::getName))
 					.forEach(r::addSearchParam);
@@ -465,7 +393,7 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 			r.addSearchParam(createSinceParameter());
 			r.addSearchParam(createAtParameter());
 
-			var resourceRevIncludeParameters = revIncludeParameters.getOrDefault(resource, Collections.emptyList());
+			var resourceRevIncludeParameters = revIncludeParameters.getOrDefault(resource, List.of());
 			var revIncludes = resourceRevIncludeParameters.stream()
 					.map(p -> p.getAnnotation(IncludeParameterDefinition.class)).filter(def -> def != null)
 					.collect(Collectors.toList());
@@ -481,10 +409,18 @@ public class ConformanceServiceImpl extends AbstractBasicService implements Conf
 
 			r.getSearchParam().sort(Comparator.comparing(CapabilityStatementRestResourceSearchParamComponent::getName));
 
-			operations.getOrDefault(resource, Collections.emptyList()).forEach(r::addOperation);
+			operations.getOrDefault(resource, List.of()).forEach(r::addOperation);
+
+			List<CanonicalType> supportedProfiles = profileUrlsByResource.getOrDefault(resourceDefAnnotation.name(),
+					List.of());
+
+			Stream<String> fromDb = supportedProfiles.stream().filter(CanonicalType::hasValue)
+					.map(CanonicalType::getValue);
+			Stream<String> fromProvider = defaultProfileProvider.getSecondaryDefaultProfiles(resourceType).stream();
 
 			r.setSupportedProfile(
-					profileUrlsByResource.getOrDefault(resourceDefAnnotation.name(), Collections.emptyList()));
+					Stream.concat(fromDb, fromProvider).filter(p -> defaultProfile.map(d -> !d.equals(p)).orElse(true))
+							.distinct().sorted().map(CanonicalType::new).toList());
 		}
 
 		return statement;
