@@ -1,3 +1,18 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.integration;
 
 import static org.junit.Assert.assertEquals;
@@ -7,23 +22,15 @@ import static org.junit.Assert.fail;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.OutputStreamWriter;
 import java.net.URI;
 import java.nio.channels.ServerSocketChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.KeyStore;
-import java.security.PrivateKey;
-import java.security.cert.Certificate;
-import java.security.cert.X509Certificate;
-import java.util.Arrays;
-import java.util.Collections;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -31,18 +38,14 @@ import java.util.function.Supplier;
 import javax.sql.DataSource;
 
 import org.apache.commons.dbcp2.BasicDataSource;
+import org.eclipse.jetty.ee10.servlet.SessionHandler;
+import org.eclipse.jetty.ee10.webapp.WebAppContext;
+import org.eclipse.jetty.ee10.websocket.jakarta.server.config.JakartaWebSocketServletContainerInitializer;
 import org.eclipse.jetty.security.SecurityHandler;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
-import org.eclipse.jetty.server.session.SessionHandler;
-import org.eclipse.jetty.webapp.WebAppContext;
-import org.eclipse.jetty.websocket.jakarta.client.JakartaWebSocketShutdownContainer;
-import org.eclipse.jetty.websocket.jakarta.server.config.JakartaWebSocketServletContainerInitializer;
 import org.glassfish.jersey.servlet.init.JerseyServletContainerInitializer;
 import org.hl7.fhir.r4.model.Bundle;
-import org.hl7.fhir.r4.model.Extension;
-import org.hl7.fhir.r4.model.Organization;
-import org.hl7.fhir.r4.model.StringType;
 import org.hl7.fhir.r4.model.Subscription;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -57,11 +60,9 @@ import org.testcontainers.utility.DockerImageName;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
+import de.hsheilbronn.mi.utils.crypto.keystore.KeyStoreCreator;
 import de.hsheilbronn.mi.utils.test.PostgreSqlContainerLiquibaseTemplateClassRule;
 import de.hsheilbronn.mi.utils.test.PostgresTemplateRule;
-import de.rwh.utils.crypto.CertificateHelper;
-import de.rwh.utils.crypto.io.CertificateReader;
-import de.rwh.utils.crypto.io.PemIo;
 import dev.dsf.common.auth.ClientCertificateAuthenticator;
 import dev.dsf.common.auth.DelegatingAuthenticator;
 import dev.dsf.common.auth.DsfLoginService;
@@ -77,7 +78,6 @@ import dev.dsf.fhir.client.FhirWebserviceClientJersey;
 import dev.dsf.fhir.client.WebsocketClient;
 import dev.dsf.fhir.client.WebsocketClientTyrus;
 import dev.dsf.fhir.dao.AbstractDbTest;
-import dev.dsf.fhir.integration.X509Certificates.ClientCertificate;
 import dev.dsf.fhir.service.ReferenceCleaner;
 import dev.dsf.fhir.service.ReferenceCleanerImpl;
 import dev.dsf.fhir.service.ReferenceExtractorImpl;
@@ -94,7 +94,7 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 
 	@ClassRule
 	public static final PostgreSqlContainerLiquibaseTemplateClassRule liquibaseRule = new PostgreSqlContainerLiquibaseTemplateClassRule(
-			DockerImageName.parse("postgres:15"), ROOT_USER, "fhir", "fhir_template", CHANGE_LOG_FILE,
+			DockerImageName.parse("postgres:18"), ROOT_USER, "fhir", "fhir_template", CHANGE_LOG_FILE,
 			CHANGE_LOG_PARAMETERS, false);
 
 	@Rule
@@ -106,10 +106,6 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 	private static final Logger logger = LoggerFactory.getLogger(AbstractIntegrationTest.class);
 
 	protected static final String CONTEXT_PATH = "/fhir";
-	protected static final String WEBSOCKET_URL = "wss://localhost:8001" + CONTEXT_PATH + "/ws";
-
-	private static final Path FHIR_BUNDLE_FILE = Paths.get("target", UUID.randomUUID().toString() + ".xml");
-	private static final List<Path> FILES_TO_DELETE = Arrays.asList(FHIR_BUNDLE_FILE);
 
 	protected static final FhirContext fhirContext = FhirContext.forR4();
 	protected static final ReadAccessHelper readAccessHelper = new ReadAccessHelperImpl();
@@ -122,6 +118,8 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 	private static FhirWebserviceClient webserviceClient;
 	private static FhirWebserviceClient externalWebserviceClient;
 	private static FhirWebserviceClient practitionerWebserviceClient;
+	private static FhirWebserviceClient adminWebserviceClient;
+	private static FhirWebserviceClient minimalWebserviceClient;
 
 	@BeforeClass
 	public static void beforeClass() throws Exception
@@ -130,30 +128,39 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 				liquibaseRule.getDatabaseName());
 		defaultDataSource.unwrap(BasicDataSource.class).start();
 
-		logger.info("Creating Bundle ...");
-		createTestBundle(certificates.getClientCertificate(), certificates.getExternalClientCertificate());
-
-		ServerSocketChannel statusConnectorChannel = JettyServer.serverSocketChannel();
-		ServerSocketChannel apiConnectorChannel = JettyServer.serverSocketChannel();
+		ServerSocketChannel statusConnectorChannel = JettyServer.serverSocketChannel("127.0.0.1");
+		ServerSocketChannel apiConnectorChannel = JettyServer.serverSocketChannel("127.0.0.1");
 
 		baseUrl = "https://localhost:" + apiConnectorChannel.socket().getLocalPort() + CONTEXT_PATH;
 
 		logger.info("Creating webservice client ...");
 		webserviceClient = createWebserviceClient(apiConnectorChannel.socket().getLocalPort(),
-				certificates.getClientCertificate().getTrustStore(), certificates.getClientCertificate().getKeyStore(),
-				certificates.getClientCertificate().getKeyStorePassword(), fhirContext, referenceCleaner);
+				certificates.getClientCertificate().trustStore(), certificates.getClientCertificate().keyStore(),
+				certificates.getClientCertificate().keyStorePassword(), fhirContext, referenceCleaner);
 
 		logger.info("Creating external webservice client ...");
 		externalWebserviceClient = createWebserviceClient(apiConnectorChannel.socket().getLocalPort(),
-				certificates.getExternalClientCertificate().getTrustStore(),
-				certificates.getExternalClientCertificate().getKeyStore(),
-				certificates.getExternalClientCertificate().getKeyStorePassword(), fhirContext, referenceCleaner);
+				certificates.getExternalClientCertificate().trustStore(),
+				certificates.getExternalClientCertificate().keyStore(),
+				certificates.getExternalClientCertificate().keyStorePassword(), fhirContext, referenceCleaner);
 
 		logger.info("Creating practitioner client ...");
 		practitionerWebserviceClient = createWebserviceClient(apiConnectorChannel.socket().getLocalPort(),
-				certificates.getPractitionerClientCertificate().getTrustStore(),
-				certificates.getPractitionerClientCertificate().getKeyStore(),
-				certificates.getPractitionerClientCertificate().getKeyStorePassword(), fhirContext, referenceCleaner);
+				certificates.getPractitionerClientCertificate().trustStore(),
+				certificates.getPractitionerClientCertificate().keyStore(),
+				certificates.getPractitionerClientCertificate().keyStorePassword(), fhirContext, referenceCleaner);
+
+		logger.info("Creating admin client ...");
+		adminWebserviceClient = createWebserviceClient(apiConnectorChannel.socket().getLocalPort(),
+				certificates.getAdminClientCertificate().trustStore(),
+				certificates.getAdminClientCertificate().keyStore(),
+				certificates.getAdminClientCertificate().keyStorePassword(), fhirContext, referenceCleaner);
+
+		logger.info("Creating minimal client ...");
+		minimalWebserviceClient = createWebserviceClient(apiConnectorChannel.socket().getLocalPort(),
+				certificates.getMinimalClientCertificate().trustStore(),
+				certificates.getMinimalClientCertificate().keyStore(),
+				certificates.getMinimalClientCertificate().keyStorePassword(), fhirContext, referenceCleaner);
 
 		logger.info("Starting FHIR Server ...");
 		fhirServer = startFhirServer(statusConnectorChannel, apiConnectorChannel, baseUrl);
@@ -166,16 +173,16 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 			char[] keyStorePassword, FhirContext fhirContext, ReferenceCleaner referenceCleaner)
 	{
 		return new FhirWebserviceClientJersey("https://localhost:" + apiPort + CONTEXT_PATH, trustStore, keyStore,
-				keyStorePassword, null, null, null, null, 0, 0, false, "DSF Integration Test Client", fhirContext,
-				referenceCleaner);
+				keyStorePassword, null, null, null, null, Duration.ZERO, Duration.ZERO, false,
+				"DSF Integration Test Client", fhirContext, referenceCleaner);
 	}
 
-	private static WebsocketClient createWebsocketClient(KeyStore trustStore, KeyStore keyStore,
+	private static WebsocketClient createWebsocketClient(int apiPort, KeyStore trustStore, KeyStore keyStore,
 			char[] keyStorePassword, String subscriptionIdPart)
 	{
 		return new WebsocketClientTyrus(() ->
-		{}, URI.create(WEBSOCKET_URL), trustStore, keyStore, keyStorePassword, null, null, null,
-				"Integration Test Client", subscriptionIdPart);
+		{}, URI.create("wss://localhost:" + apiPort + CONTEXT_PATH + "/ws"), trustStore, keyStore, keyStorePassword,
+				null, null, null, "Integration Test Client", subscriptionIdPart);
 	}
 
 	private static JettyServer startFhirServer(ServerSocketChannel statusConnectorChannel,
@@ -187,16 +194,20 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 
 		initParameters.put("dev.dsf.fhir.db.url", "jdbc:postgresql://" + liquibaseRule.getHost() + ":"
 				+ liquibaseRule.getMappedPort(5432) + "/" + liquibaseRule.getDatabaseName());
+		initParameters.put("dev.dsf.fhir.db.user.group", DATABASE_USERS_GROUP);
 		initParameters.put("dev.dsf.fhir.db.user.username", DATABASE_USER);
 		initParameters.put("dev.dsf.fhir.db.user.password", DATABASE_USER_PASSWORD);
+		initParameters.put("dev.dsf.fhir.db.user.permanent.delete.group", DATABASE_DELETE_USERS_GROUP);
 		initParameters.put("dev.dsf.fhir.db.user.permanent.delete.username", DATABASE_DELETE_USER);
 		initParameters.put("dev.dsf.fhir.db.user.permanent.delete.password", DATABASE_DELETE_USER_PASSWORD);
 
 		initParameters.put("dev.dsf.fhir.server.base.url", baseUrl);
 		initParameters.put("dev.dsf.fhir.server.organization.identifier.value", "Test_Organization");
-		initParameters.put("dev.dsf.fhir.server.init.bundle", FHIR_BUNDLE_FILE.toString());
+		initParameters.put("dev.dsf.fhir.server.init.bundle", "src/test/resources/integration/test-bundle.xml");
 
 		initParameters.put("dev.dsf.fhir.client.trust.server.certificate.cas",
+				certificates.getCaCertificateFile().toString());
+		initParameters.put("dev.dsf.server.auth.trust.client.certificate.cas",
 				certificates.getCaCertificateFile().toString());
 		initParameters.put("dev.dsf.fhir.client.certificate", certificates.getClientCertificateFile().toString());
 		initParameters.put("dev.dsf.fhir.client.certificate.private.key",
@@ -204,34 +215,58 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 		initParameters.put("dev.dsf.fhir.client.certificate.private.key.password",
 				String.valueOf(X509Certificates.PASSWORD));
 
-		initParameters.put("dev.dsf.fhir.server.roleConfig", String.format("""
-				- practitioner-test-user:
-				    thumbprint: %s
-				    dsf-role:
-				      - CREATE
-				      - READ
-				      - UPDATE
-				      - DELETE
-				      - SEARCH
-				      - HISTORY
-				    practitioner-role:
-				      - http://dsf.dev/fhir/CodeSystem/practitioner-role|DIC_USER
-				""", certificates.getPractitionerClientCertificate().getCertificateSha512ThumbprintHex()));
+		initParameters.put("dev.dsf.fhir.server.roleConfig",
+				String.format("""
+						- practitioner-test-user:
+						    thumbprint: %s
+						    dsf-role:
+						      - CREATE
+						      - READ
+						      - UPDATE
+						      - DELETE
+						      - SEARCH
+						      - HISTORY
+						    practitioner-role:
+						      - http://dsf.dev/fhir/CodeSystem/practitioner-role|DIC_USER
+						- admin-user:
+						    thumbprint: %s
+						    dsf-role: [CREATE, READ, UPDATE, DELETE, SEARCH, HISTORY]
+						    practitioner-role:
+						      - http://dsf.dev/fhir/CodeSystem/practitioner-role|DSF_ADMIN
+						- minimal-test-user:
+						    thumbprint: %s
+						    dsf-role:
+						      - CREATE: [Task]
+						      - READ: &tqqr [Task, Questionnaire, QuestionnaireResponse]
+						      - UPDATE: [QuestionnaireResponse]
+						      - SEARCH: *tqqr
+						      - HISTORY: *tqqr
+						    practitioner-role:
+						      - http://dsf.dev/fhir/CodeSystem/practitioner-role|DIC_USER
+						""", certificates.getPractitionerClientCertificate().certificateSha512ThumbprintHex(),
+						certificates.getAdminClientCertificate().certificateSha512ThumbprintHex(),
+						certificates.getMinimalClientCertificate().certificateSha512ThumbprintHex()));
+		initParameters.put("dev.dsf.fhir.debug.log.message.dbStatement", "true");
 
-		KeyStore caCertificate = CertificateReader.allFromCer(certificates.getCaCertificateFile());
-		PrivateKey privateKey = PemIo.readPrivateKeyFromPem(certificates.getServerCertificatePrivateKeyFile(),
-				X509Certificates.PASSWORD);
-		X509Certificate certificate = PemIo.readX509CertificateFromPem(certificates.getServerCertificateFile());
-		char[] keyStorePassword = UUID.randomUUID().toString().toCharArray();
-		KeyStore serverCertificateKeyStore = CertificateHelper.toJksKeyStore(privateKey,
-				new Certificate[] { certificate }, UUID.randomUUID().toString(), keyStorePassword);
+		initParameters.put("dev.dsf.fhir.server.organization.thumbprint",
+				certificates.getClientCertificate().certificateSha512ThumbprintHex());
+		initParameters.put("dev.dsf.fhir.server.endpoint.address",
+				"https://localhost:" + apiConnectorChannel.socket().getLocalPort() + "/fhir");
+		initParameters.put("dev.dsf.fhir.server.organization.thumbprint.external",
+				certificates.getExternalClientCertificate().certificateSha512ThumbprintHex());
+		initParameters.put("dev.dsf.fhir.server.endpoint.address.external", "https://localhost:80010/fhir");
 
-		Function<Server, ServerConnector> apiConnector = JettyServer.httpsConnector(apiConnectorChannel, caCertificate,
-				serverCertificateKeyStore, keyStorePassword, false);
+		KeyStore clientCertificateTrustStore = KeyStoreCreator
+				.jksForTrustedCertificates(certificates.getCaCertificate());
+		KeyStore serverCertificateKeyStore = certificates.getServerCertificate().keyStore();
+
+		Function<Server, ServerConnector> apiConnector = JettyServer.httpsConnector(apiConnectorChannel,
+				clientCertificateTrustStore, serverCertificateKeyStore,
+				certificates.getServerCertificate().keyStorePassword(), false);
 		Function<Server, ServerConnector> statusConnector = JettyServer.statusConnector(statusConnectorChannel);
-		List<Class<? extends ServletContainerInitializer>> servletContainerInitializers = Arrays.asList(
-				JakartaWebSocketShutdownContainer.class, JakartaWebSocketServletContainerInitializer.class,
-				JerseyServletContainerInitializer.class, SpringServletContainerInitializer.class);
+		List<Class<? extends ServletContainerInitializer>> servletContainerInitializers = List.of(
+				JakartaWebSocketServletContainerInitializer.class, JerseyServletContainerInitializer.class,
+				SpringServletContainerInitializer.class);
 
 		BiConsumer<WebAppContext, Supplier<Integer>> securityHandlerConfigurer = (webAppContext, statusPortSupplier) ->
 		{
@@ -240,7 +275,7 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 
 			StatusPortAuthenticator statusPortAuthenticator = new StatusPortAuthenticator(statusPortSupplier);
 			ClientCertificateAuthenticator clientCertificateAuthenticator = new ClientCertificateAuthenticator(
-					caCertificate);
+					clientCertificateTrustStore);
 			DelegatingAuthenticator delegatingAuthenticator = new DelegatingAuthenticator(sessionHandler,
 					statusPortAuthenticator, clientCertificateAuthenticator, null, null, null, null);
 
@@ -272,74 +307,33 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 		}
 	}
 
-	protected static void writeBundle(Path bundleFile, Bundle bundle)
-	{
-		try (OutputStream out = Files.newOutputStream(bundleFile);
-				OutputStreamWriter writer = new OutputStreamWriter(out))
-		{
-			newXmlParser().encodeResourceToWriter(bundle, writer);
-		}
-		catch (IOException e)
-		{
-			logger.error("Error while writing bundle to {}", bundleFile.toString(), e);
-			throw new RuntimeException(e);
-		}
-	}
-
 	protected static IParser newXmlParser()
 	{
-		IParser parser = fhirContext.newXmlParser();
-		parser.setStripVersionsFromReferences(false);
-		parser.setOverrideResourceIdWithBundleEntryFullUrl(false);
-		parser.setPrettyPrint(true);
-		return parser;
+		return newParser(fhirContext::newXmlParser);
 	}
 
 	protected static IParser newJsonParser()
 	{
-		IParser parser = fhirContext.newJsonParser();
-		parser.setStripVersionsFromReferences(false);
-		parser.setOverrideResourceIdWithBundleEntryFullUrl(false);
-		parser.setPrettyPrint(true);
-		return parser;
+		return newParser(fhirContext::newJsonParser);
 	}
 
-	private static void createTestBundle(ClientCertificate clientCertificate,
-			ClientCertificate externalClientCertificate)
+	private static IParser newParser(Supplier<IParser> supplier)
 	{
-		Path testBundleTemplateFile = Paths.get("src/test/resources/integration/test-bundle.xml");
-
-		Bundle testBundle = readBundle(testBundleTemplateFile, newXmlParser());
-
-		Organization organization = (Organization) testBundle.getEntry().get(0).getResource();
-		Extension thumbprintExtension = organization
-				.getExtensionByUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint");
-
-		thumbprintExtension.setValue(new StringType(clientCertificate.getCertificateSha512ThumbprintHex()));
-
-		Organization externalOrganization = (Organization) testBundle.getEntry().get(2).getResource();
-		Extension externalThumbprintExtension = externalOrganization
-				.getExtensionByUrl("http://dsf.dev/fhir/StructureDefinition/extension-certificate-thumbprint");
-
-		externalThumbprintExtension
-				.setValue(new StringType(externalClientCertificate.getCertificateSha512ThumbprintHex()));
-
-		// FIXME hapi parser can't handle embedded resources and creates them while parsing bundles
-		new ReferenceCleanerImpl(new ReferenceExtractorImpl()).cleanReferenceResourcesIfBundle(testBundle);
-
-		writeBundle(FHIR_BUNDLE_FILE, testBundle);
+		IParser p = supplier.get();
+		p.setStripVersionsFromReferences(false);
+		p.setOverrideResourceIdWithBundleEntryFullUrl(false);
+		p.setPrettyPrint(true);
+		return p;
 	}
 
 	@AfterClass
 	public static void afterClass() throws Exception
 	{
-		defaultDataSource.unwrap(BasicDataSource.class).close();
-
 		try
 		{
 			if (fhirServer != null)
 			{
-				logger.info("Stoping FHIR Server ...");
+				logger.info("Stopping FHIR Server ...");
 				fhirServer.stop();
 			}
 		}
@@ -348,20 +342,7 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 			logger.error("Error while stopping FHIR Server", e);
 		}
 
-		logger.info("Deleting files {} ...", FILES_TO_DELETE);
-		FILES_TO_DELETE.forEach(AbstractIntegrationTest::deleteFile);
-	}
-
-	private static void deleteFile(Path file)
-	{
-		try
-		{
-			Files.delete(file);
-		}
-		catch (IOException e)
-		{
-			logger.error("Error while deleting test file {}, error: {}", file.toString(), e.toString());
-		}
+		defaultDataSource.unwrap(BasicDataSource.class).close();
 	}
 
 	protected AnnotationConfigWebApplicationContext getSpringWebApplicationContext()
@@ -390,12 +371,21 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 		return practitionerWebserviceClient;
 	}
 
+	protected static FhirWebserviceClient getAdminWebserviceClient()
+	{
+		return adminWebserviceClient;
+	}
+
+	protected static FhirWebserviceClient getMinimalWebserviceClient()
+	{
+		return minimalWebserviceClient;
+	}
+
 	protected static WebsocketClient getWebsocketClient()
 	{
 		Bundle bundle = getWebserviceClient().searchWithStrictHandling(Subscription.class,
-				Map.of("criteria", Collections.singletonList("Task?status=requested"), "status",
-						Collections.singletonList("active"), "type", Collections.singletonList("websocket"), "payload",
-						Collections.singletonList("application/fhir+json")));
+				Map.of("criteria", List.of("Task?status=requested"), "status", List.of("active"), "type",
+						List.of("websocket"), "payload", List.of("application/fhir+json")));
 
 		assertNotNull(bundle);
 		assertEquals(1, bundle.getTotal());
@@ -406,9 +396,9 @@ public abstract class AbstractIntegrationTest extends AbstractDbTest
 		assertNotNull(subscription.getIdElement());
 		assertNotNull(subscription.getIdElement().getIdPart());
 
-		return createWebsocketClient(certificates.getClientCertificate().getTrustStore(),
-				certificates.getClientCertificate().getKeyStore(),
-				certificates.getClientCertificate().getKeyStorePassword(), subscription.getIdElement().getIdPart());
+		return createWebsocketClient(fhirServer.getApiPort(), certificates.getClientCertificate().trustStore(),
+				certificates.getClientCertificate().keyStore(), certificates.getClientCertificate().keyStorePassword(),
+				subscription.getIdElement().getIdPart());
 	}
 
 	protected static final ReadAccessHelper getReadAccessHelper()
