@@ -1,10 +1,24 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.integration;
 
 import static junit.framework.TestCase.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -45,7 +59,7 @@ public class ResearchStudyIntegrationTest extends AbstractIntegrationTest
 		String researchStudyId = researchStudyDao.create(rs).getIdElement().getIdPart();
 
 		Bundle resultBundle = getWebserviceClient().searchWithStrictHandling(ResearchStudy.class,
-				Map.of("enrollment", Collections.singletonList(groupId)));
+				Map.of("enrollment", List.of(groupId)));
 
 		assertNotNull(resultBundle);
 		assertEquals(1, resultBundle.getTotal());
