@@ -1,10 +1,26 @@
+/*
+ * Copyright 2018-2025 Heilbronn University of Applied Sciences
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package dev.dsf.fhir.profiles;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 
 import org.hl7.fhir.r4.model.ActivityDefinition;
 import org.hl7.fhir.r4.model.ActivityDefinition.ActivityDefinitionKind;
@@ -13,7 +29,6 @@ import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Enumerations.PublicationStatus;
 import org.hl7.fhir.r4.model.Extension;
 import org.hl7.fhir.r4.model.Identifier;
-import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.StringType;
 import org.junit.ClassRule;
 import org.junit.Test;
@@ -25,68 +40,45 @@ import dev.dsf.fhir.validation.ResourceValidator;
 import dev.dsf.fhir.validation.ResourceValidatorImpl;
 import dev.dsf.fhir.validation.ValidationSupportRule;
 
-public class ActivityDefinitionProfileTest
+public class ActivityDefinitionProfileTest extends AbstractMetaDataResourceProfileTest<ActivityDefinition>
 {
 	private static final Logger logger = LoggerFactory.getLogger(ActivityDefinitionProfileTest.class);
 
 	@ClassRule
-	public static final ValidationSupportRule validationRule = new ValidationSupportRule(
-			Arrays.asList("dsf-activity-definition-1.0.0.xml", "dsf-extension-process-authorization-1.0.0.xml",
-					"dsf-extension-process-authorization-practitioner-1.0.0.xml",
-					"dsf-extension-process-authorization-organization-1.0.0.xml",
-					"dsf-extension-process-authorization-organization-practitioner-1.0.0.xml",
-					"dsf-extension-process-authorization-parent-organization-role-1.0.0.xml",
-					"dsf-extension-process-authorization-parent-organization-role-practitioner-1.0.0.xml",
-					"dsf-coding-process-authorization-local-all-1.0.0.xml",
-					"dsf-coding-process-authorization-local-all-practitioner-1.0.0.xml",
-					"dsf-coding-process-authorization-local-organization-1.0.0.xml",
-					"dsf-coding-process-authorization-local-organization-practitioner-1.0.0.xml",
-					"dsf-coding-process-authorization-local-parent-organization-role-1.0.0.xml",
-					"dsf-coding-process-authorization-local-parent-organization-role-practitioner-1.0.0.xml",
-					"dsf-coding-process-authorization-remote-all-1.0.0.xml",
-					"dsf-coding-process-authorization-remote-organization-1.0.0.xml",
-					"dsf-coding-process-authorization-remote-parent-organization-role-1.0.0.xml"),
-			Arrays.asList("dsf-read-access-tag-1.0.0.xml", "dsf-organization-role-1.0.0.xml",
-					"dsf-practitioner-role-1.0.0.xml", "dsf-process-authorization-1.0.0.xml"),
-			Arrays.asList("dsf-read-access-tag-1.0.0.xml", "dsf-organization-role-1.0.0.xml",
-					"dsf-practitioner-role-1.0.0.xml", "dsf-process-authorization-recipient-1.0.0.xml",
-					"dsf-process-authorization-requester-1.0.0.xml"));
+	public static final ValidationSupportRule validationRule = new ValidationSupportRule(context,
+			List.of("dsf-extension-read-access-organization-2.0.0.xml",
+					"dsf-extension-read-access-parent-organization-role-2.0.0.xml", "dsf-meta-2.0.0.xml",
+					"dsf-extension-process-authorization-2.0.0.xml",
+					"dsf-extension-process-authorization-practitioner-2.0.0.xml",
+					"dsf-extension-process-authorization-organization-2.0.0.xml",
+					"dsf-extension-process-authorization-organization-practitioner-2.0.0.xml",
+					"dsf-extension-process-authorization-parent-organization-role-2.0.0.xml",
+					"dsf-extension-process-authorization-parent-organization-role-practitioner-2.0.0.xml",
+					"dsf-coding-process-authorization-local-all-2.0.0.xml",
+					"dsf-coding-process-authorization-local-all-practitioner-2.0.0.xml",
+					"dsf-coding-process-authorization-local-organization-2.0.0.xml",
+					"dsf-coding-process-authorization-local-organization-practitioner-2.0.0.xml",
+					"dsf-coding-process-authorization-local-parent-organization-role-2.0.0.xml",
+					"dsf-coding-process-authorization-local-parent-organization-role-practitioner-2.0.0.xml",
+					"dsf-coding-process-authorization-remote-all-2.0.0.xml",
+					"dsf-coding-process-authorization-remote-organization-2.0.0.xml",
+					"dsf-coding-process-authorization-remote-parent-organization-role-2.0.0.xml",
+					"dsf-activity-definition-2.0.0.xml"),
+			List.of("dsf-read-access-tag-2.0.0.xml", "dsf-organization-role-2.0.0.xml",
+					"dsf-practitioner-role-2.0.0.xml", "dsf-process-authorization-2.0.0.xml"),
+			List.of("dsf-read-access-tag-2.0.0.xml", "dsf-organization-role-2.0.0.xml",
+					"dsf-practitioner-role-2.0.0.xml", "dsf-process-authorization-recipient-2.0.0.xml",
+					"dsf-process-authorization-requester-2.0.0.xml"));
 
 	private final ResourceValidator resourceValidator = new ResourceValidatorImpl(validationRule.getFhirContext(),
 			validationRule.getValidationSupport());
 
-	private ActivityDefinition createActivityDefinition()
+	@Override
+	protected ActivityDefinition create()
 	{
-		var ad = new ActivityDefinition();
-		ad.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/activity-definition");
-		ad.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
-		ad.setUrl("http://dsf.dev/bpe/Process/test");
-		ad.setVersion("1.0.0");
-		ad.setStatus(PublicationStatus.ACTIVE);
-		ad.setKind(ActivityDefinitionKind.TASK);
-		ad.setName("TestProcess");
+		ActivityDefinition d = createWithoutAuthExtension();
 
-		return ad;
-	}
-
-	private void logMessages(ValidationResult result)
-	{
-		result.getMessages().stream().map(m -> m.getLocationString() + " " + m.getLocationLine() + ":"
-				+ m.getLocationCol() + " - " + m.getSeverity() + ": " + m.getMessage()).forEach(logger::debug);
-	}
-
-	private void logResource(Resource resource)
-	{
-		logger.trace("{}",
-				validationRule.getFhirContext().newJsonParser().setPrettyPrint(false).encodeResourceToString(resource));
-	}
-
-	@Test
-	public void testActivityDefinitionWithProcessAuthorizationRequesterRemoteAllRecipientLocalAllValid()
-			throws Exception
-	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -96,11 +88,56 @@ public class ActivityDefinitionProfileTest
 		processAuthorization.addExtension("recipient",
 				new Coding("http://dsf.dev/fhir/CodeSystem/process-authorization", "LOCAL_ALL", null));
 
-		logResource(ad);
+		return d;
+	}
 
-		ValidationResult result = resourceValidator.validate(ad);
+	private ActivityDefinition createWithoutAuthExtension()
+	{
+		ActivityDefinition d = new ActivityDefinition();
+		d.getMeta().addProfile("http://dsf.dev/fhir/StructureDefinition/activity-definition");
+		d.setUrl("http://dsf.dev/bpe/Process/test");
+		d.setVersion("2.0.0");
+		d.setStatus(PublicationStatus.ACTIVE);
+		d.setKind(ActivityDefinitionKind.TASK);
+		d.setName("TestProcess");
+		d.setDate(new Date());
 
-		logMessages(result);
+		return d;
+	}
+
+	@Test
+	public void runMetaTagTests() throws Exception
+	{
+		doRunMetaTagTests(resourceValidator);
+	}
+
+	@Test
+	public void runMetaDataResourceTests() throws Exception
+	{
+		doRunMetaDataResourceTests(resourceValidator);
+	}
+
+	@Test
+	public void testActivityDefinitionWithProcessAuthorizationRequesterRemoteAllRecipientLocalAllValid()
+			throws Exception
+	{
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
+				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
+		processAuthorization.addExtension("message-name", new StringType("foo"));
+		processAuthorization.addExtension("task-profile",
+				new CanonicalType("http://bar.org/fhir/StructureDefinition/baz"));
+		processAuthorization.addExtension("requester",
+				new Coding("http://dsf.dev/fhir/CodeSystem/process-authorization", "REMOTE_ALL", null));
+		processAuthorization.addExtension("recipient",
+				new Coding("http://dsf.dev/fhir/CodeSystem/process-authorization", "LOCAL_ALL", null));
+
+		logResource(d);
+
+		ValidationResult result = resourceValidator.validate(d);
+
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertTrue(result.isSuccessful());
 	}
@@ -109,8 +146,9 @@ public class ActivityDefinitionProfileTest
 	public void testActivityDefinitionWithProcessAuthorizationRequesterLocalPractitionerRoleRecipientLocalAllValid()
 			throws Exception
 	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -125,11 +163,11 @@ public class ActivityDefinitionProfileTest
 		processAuthorization.addExtension("recipient",
 				new Coding("http://dsf.dev/fhir/CodeSystem/process-authorization", "LOCAL_ALL", null));
 
-		logResource(ad);
+		logResource(d);
 
-		ValidationResult result = resourceValidator.validate(ad);
+		ValidationResult result = resourceValidator.validate(d);
 
-		logMessages(result);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertTrue(result.isSuccessful());
 	}
@@ -138,8 +176,9 @@ public class ActivityDefinitionProfileTest
 	public void testActivityDefinitionWithProcessAuthorizationRequesterRemoteOrganizationRecipientLocalParentOrganizationRoleValid()
 			throws Exception
 	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -162,11 +201,11 @@ public class ActivityDefinitionProfileTest
 				new Coding("http://dsf.dev/fhir/CodeSystem/organization-role", "DIC", null));
 		processAuthorization.addExtension("recipient", recipientCoding);
 
-		logResource(ad);
+		logResource(d);
 
-		ValidationResult result = resourceValidator.validate(ad);
+		ValidationResult result = resourceValidator.validate(d);
 
-		logMessages(result);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertTrue(result.isSuccessful());
 	}
@@ -175,8 +214,9 @@ public class ActivityDefinitionProfileTest
 	public void testActivityDefinitionWithProcessAuthorizationRequesterOrganizationPractitionerRoleRecipientLocalParentOrganizationRoleValid()
 			throws Exception
 	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -203,11 +243,11 @@ public class ActivityDefinitionProfileTest
 				new Coding("http://dsf.dev/fhir/CodeSystem/organization-role", "DIC", null));
 		processAuthorization.addExtension("recipient", recipientCoding);
 
-		logResource(ad);
+		logResource(d);
 
-		ValidationResult result = resourceValidator.validate(ad);
+		ValidationResult result = resourceValidator.validate(d);
 
-		logMessages(result);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertTrue(result.isSuccessful());
 	}
@@ -216,8 +256,9 @@ public class ActivityDefinitionProfileTest
 	public void testActivityDefinitionWithProcessAuthorizationRequesterParentOrganizationRolePractitionerRoleRecipientLocalAllValid()
 			throws Exception
 	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -239,11 +280,11 @@ public class ActivityDefinitionProfileTest
 		processAuthorization.addExtension("recipient",
 				new Coding("http://dsf.dev/fhir/CodeSystem/process-authorization", "LOCAL_ALL", null));
 
-		logResource(ad);
+		logResource(d);
 
-		ValidationResult result = resourceValidator.validate(ad);
+		ValidationResult result = resourceValidator.validate(d);
 
-		logMessages(result);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertTrue(result.isSuccessful());
 	}
@@ -252,8 +293,9 @@ public class ActivityDefinitionProfileTest
 	public void testActivityDefinitionWithProcessAuthorizationRequesterRemoteOrganizationRecipientRemoteConsortiumRoleNotValid()
 			throws Exception
 	{
-		ActivityDefinition ad = createActivityDefinition();
-		Extension processAuthorization = ad.addExtension()
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+		Extension processAuthorization = d.addExtension()
 				.setUrl("http://dsf.dev/fhir/StructureDefinition/extension-process-authorization");
 		processAuthorization.addExtension("message-name", new StringType("foo"));
 		processAuthorization.addExtension("task-profile",
@@ -270,13 +312,29 @@ public class ActivityDefinitionProfileTest
 				null);
 		processAuthorization.addExtension("recipient", recipientCoding);
 
-		logResource(ad);
+		logResource(d);
 
-		ValidationResult result = resourceValidator.validate(ad);
+		ValidationResult result = resourceValidator.validate(d);
 
-		logMessages(result);
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
 
 		assertFalse(result.isSuccessful());
-		assertEquals(7, result.getMessages().size());
+		assertEquals(9, result.getMessages().size());
+	}
+
+	@Test
+	public void testActivityDefinitionWithoutProcessAuthorizationNotValid() throws Exception
+	{
+		ActivityDefinition d = createWithoutAuthExtension();
+		d.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
+
+		logResource(d);
+
+		ValidationResult result = resourceValidator.validate(d);
+
+		ValidationSupportRule.logValidationMessages(logger::debug, result);
+
+		assertFalse(result.isSuccessful());
+		assertEquals(2, result.getMessages().size());
 	}
 }
